golang study >> ginchat md5 token
