# ginchat/models/user_basic.go
@@ -12,6 +12,7 @@ type UserBasic struct {
 	gorm.Model
 	Name          string
 	Password      string
+	Salt          string
 	Phone         string `valid:"matches(^1[3-9]{1}\\d{9})"`
 	Email         string `valid:"email"`
 	Identity      string
@@ -41,6 +42,24 @@ func CreateUser(user UserBasic) *gorm.DB {
 	return utils.DB.Create(&user)
 }
 
+func FindUserByName(name string) UserBasic {
+	user := UserBasic{}
+	utils.DB.Where("name = ?", name).First(&user)
+	return user
+}
+
+func FindUserByNameAndPwd(name, password string) UserBasic {
+	user := UserBasic{}
+	utils.DB.Where("name = ? and password = ?", name, password).First(&user)
+	return user
+}
+
+func FindUserByTel(phone string) UserBasic {
+	user := UserBasic{}
+	utils.DB.Where("phone = ", phone).First(&user)
+	return user
+}
+
 func DeleteUser(user UserBasic) *gorm.DB {
 	return utils.DB.Delete(&user)
 }
@@ -52,4 +71,9 @@ func UpdateUser(user UserBasic) *gorm.DB {
 		Phone:    user.Phone,
 		Email:    user.Email,
 	})
+}
+
+func UpdateUserToken(user UserBasic) *gorm.DB {
+	token := utils.MD5Encode(fmt.Sprintf("%d", time.Now().Unix()))
+	return utils.DB.Model(&user).Update("Identity", token)
 }
